# csven-rs

./: .gitignore  Cargo.toml  Makefile  README.md  meson.build
build-aux/: csven-win.nsi  dist-vendor.sh
data/metainfo/: io.github.rsvzz.csven.metainfo.xml
data/styles/: io.github.rsvzz.csven.css
data/ui/: about.cmb  about.ui  csven.cmb  csven.ui  verb.cmb  verb.ui
debian/: changelog  changelog.dch  control  files  install  rules
flatpak/: io.github.rsvzz.csven.json
snap/: snapcraft.yaml
src/: main.rs  meson.build
src/model/: change_char.rs  item_game.rs  mod.rs  opt_valid.rs  validgrid_view.rs
src/pages/: drag.rs  game.rs  mod.rs  verb.rs  view_page.rs
